# MiniSearchRec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
config/: filter.yaml  framework.yaml  global.yaml  rank.yaml  recall.yaml
config/biz/: hint.yaml  nav.yaml  search.yaml  sug.yaml
data/: sample_docs.json
docs/: learning_path.md  project_summary.md
proto/: doc.proto  event.proto  search.proto  user.proto
scripts/: train_rank_model.py
src/: main.cpp
src/ab/: ab_test.cpp  ab_test.h
src/biz/doc/: doc_handler.cpp  doc_handler.h
src/biz/event/: event_handler.cpp  event_handler.h
src/biz/hint/: hint_context.h  hint_factory.cpp  hint_factory.h  hint_handler.cpp  hint_handler.h  hint_rank_item.h
src/biz/hint/processor/: hint_rank_processor.cpp  hint_rank_processor.h
src/biz/nav/: nav_context.h  nav_factory.cpp  nav_factory.h  nav_handler.cpp  nav_handler.h  nav_rank_item.h
src/biz/nav/processor/: nav_score_processor.cpp  nav_score_processor.h
src/biz/search/: search_handler.cpp  search_handler.h  search_session.cpp  search_session.h
src/biz/sug/: sug_context.h  sug_factory.cpp  sug_factory.h  sug_handler.cpp  sug_handler.h  sug_rank_item.h  sug_trie.cpp  sug_trie.h
src/biz/sug/processor/: sug_post_rank_processor.cpp  sug_post_rank_processor.h  sug_relevance_processor.cpp  sug_relevance_processor.h
src/cache/: cache_manager.cpp  cache_manager.h  lru_cache.h  redis_client.cpp  redis_client.h
src/core/: app_context.cpp  app_context.h  background_scheduler.cpp  background_scheduler.h  config_manager.cpp  config_manager.h  embedding_provider.h  factory.cpp  factory.h  pipeline.cpp  pipeline.h  processor.h  session.cpp  session.h
src/feature/: doc_features.cpp  doc_features.h  feature_store.cpp  feature_store.h  query_features.cpp  query_features.h  user_features.cpp  user_features.h
src/filter/: blacklist_filter.cpp  blacklist_filter.h  dedup_filter.cpp  dedup_filter.h  quality_filter.cpp  quality_filter.h  spam_filter.cpp  spam_filter.h
src/framework/: app_context.cpp  app_context.h  class_register.h
src/framework/config/: config_manager.cpp  config_manager.h
src/framework/handler/: base_handler.cpp  base_handler.h  handler_manager.cpp  handler_manager.h
src/framework/processor/: processor_interface.h  processor_pipeline.cpp  processor_pipeline.h
src/framework/server/: server.cpp  server.h
src/framework/session/: session.cpp  session.h  session_factory.cpp  session_factory.h
src/gateway/: http_server.cpp  http_server.h
src/index/: doc_store.cpp  doc_store.h  index_builder.cpp  index_builder.h  inverted_index.cpp  inverted_index.h  vector_index.cpp  vector_index.h
src/lib/embedding/: embedding_provider.h  embedding_provider_factory.cpp  onnx_embedding_provider.cpp  onnx_embedding_provider.h
src/lib/feature/: doc_features.cpp  doc_features.h  feature_store.cpp  feature_store.h  query_features.cpp  query_features.h  user_features.cpp  user_features.h
src/lib/filter/: blacklist_filter.cpp  blacklist_filter.h  dedup_filter.cpp  dedup_filter.h  quality_filter.cpp  quality_filter.h  spam_filter.cpp  spam_filter.h
src/lib/index/: doc_store.cpp  doc_store.h  index_builder.cpp  index_builder.h  inverted_index.cpp  inverted_index.h  vector_index.cpp  vector_index.h
src/lib/query/: query_expander.cpp  query_expander.h  query_normalizer.cpp  query_normalizer.h  query_parser.cpp  query_parser.h
src/lib/rank/base/: processor_interface.h  rank.cpp  rank.h  rank_context.h  rank_factory.h  rank_item.h  rank_manager.cpp  rank_manager.h  rank_vector.h
src/lib/rank/reranker/: mmr_reranker.cpp  mmr_reranker.h
src/lib/rank/scorer/: bm25_scorer.cpp  bm25_scorer.h  freshness_scorer.cpp  freshness_scorer.h  lgbm_ranker.cpp  lgbm_ranker.h  quality_scorer.cpp  quality_scorer.h
src/lib/recall/: hot_content_recall.cpp  hot_content_recall.h  inverted_recall.cpp  inverted_recall.h  recall_fusion.cpp  recall_fusion.h  user_history_recall.cpp  user_history_recall.h  vector_recall.cpp  vector_recall.h
src/lib/storage/: doc_cooccur_store.cpp  doc_cooccur_store.h  query_stats_store.cpp  query_stats_store.h
src/lib/user/: user_event_handler.cpp  user_event_handler.h  user_interest_updater.cpp  user_interest_updater.h  user_profile.cpp  user_profile.h
src/query/: query_expander.cpp  query_expander.h  query_normalizer.cpp  query_normalizer.h  query_parser.cpp  query_parser.h
src/rank/: bm25_scorer.cpp  bm25_scorer.h  freshness_scorer.cpp  freshness_scorer.h  lgbm_ranker.cpp  lgbm_ranker.h  mmr_reranker.cpp  mmr_reranker.h  quality_scorer.cpp  quality_scorer.h
src/recall/: hot_content_recall.cpp  hot_content_recall.h  inverted_recall.cpp  inverted_recall.h  recall_fusion.cpp  recall_fusion.h  user_history_recall.cpp  user_history_recall.h  vector_recall.cpp  vector_recall.h
src/scheduler/: scheduler.cpp  scheduler.h
src/scheduler/task/: auto_train_task.cpp  auto_train_task.h  index_rebuild_task.cpp  index_rebuild_task.h  trie_rebuild_task.cpp  trie_rebuild_task.h
src/service/: doc_handler.cpp  event_handler.cpp  http_server.cpp  http_server.h  search_handler.cpp  search_handler.h
src/user/: user_event_handler.cpp  user_event_handler.h  user_interest_updater.cpp  user_interest_updater.h  user_profile.cpp
src/utils/: hash_utils.cpp  hash_utils.h  logger.cpp  logger.h  string_utils.cpp  string_utils.h  vector_utils.cpp  vector_utils.h
tests/: test_all.cpp  test_bm25_scorer.cpp  test_inverted_index.cpp  test_pipeline.cpp  test_vector_index.cpp
tools/: build_index.cpp  dump_train_data.cpp  import_docs.py
